tests/baselines/reference/emitArrowFunctionWhenUsingArguments11(alwaysstrict=true,target=es2015).errors.txt
emitArrowFunctionWhenUsingArguments11.ts(1,12): error TS1100: Invalid use of 'arguments' in strict mode.


==== emitArrowFunctionWhenUsingArguments11.ts (1 errors) ====
    function f(arguments) {
               ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
        var _arguments = 10;
        var a = () => () => arguments;
    }